feat: 난수 생성 함수 추가